--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "viteweb",
+  "name": "tech-forum-2026",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite"
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/1113211044-tech/viteweb.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/1113211044-tech/viteweb/issues"
-  },
-  "homepage": "https://github.com/1113211044-tech/viteweb#readme",
-  "devDependencies": {
-    "vite": "^7.2.4"
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
+    "sass": "^1.71.1"
   }
 }
